--- a/app/src/main/res/layout/activity_cloth.xml
+++ b/app/src/main/res/layout/activity_cloth.xml
@@ -6,11 +6,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
     </androidx.recyclerview.widget.RecyclerView>
-    <Button
-            android:layout_gravity="center"
-            android:text="chuyển trang"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+<!--    <Button-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:text="chuyển trang"-->
+<!--            android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
 </LinearLayout>
