--- a/app/src/main/res/layout/fragment_cloth_item.xml
+++ b/app/src/main/res/layout/fragment_cloth_item.xml
@@ -1,18 +1,11 @@
-<LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center">
     <ImageView
-            android:layout_weight="1"
-            android:id="@+id/cloth_item_left"
             android:src="@mipmap/cloth_foreground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    <ImageView
-            android:layout_weight="1"
-            android:id="@+id/cloth_item_right"
-            android:src="@mipmap/cloth_foreground"
+            android:id="@+id/itemCloth"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </LinearLayout>
